# trajkit-demo

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: docs-pages.yml
docs/: 5d_tracking.rst  conf.py  index.rst  requirements.txt
docs/active_colloids/: asymmetric_motility_pattern.rst  bacterial_motion.rst  ecoli_run_and_tumble.rst  holographic_tracking.rst  index.rst  rheotaxis.rst  swimming_in_circle.rst
docs/demos/: bacteria_3d_motion.rst  cdv_correlated_displacement.rst  index.rst  nanorod_membrane.rst
tools/: make_gif.md
